tests/baselines/reference/ES5For-ofTypeCheck11(strict=true).errors.txt
ES5For-ofTypeCheck11.ts(3,6): error TS2322: Type 'string | number' is not assignable to type 'string'.
  Type 'number' is not assignable to type 'string'.
ES5For-ofTypeCheck11.ts(3,11): error TS2454: Variable 'union' is used before being assigned.


==== ES5For-ofTypeCheck11.ts (2 errors) ====
    var union: string | number[];
    var v: string;
    for (v of union) { }
         ~
!!! error TS2322: Type 'string | number' is not assignable to type 'string'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
              ~~~~~
!!! error TS2454: Variable 'union' is used before being assigned.